--- a/README
+++ b/README
@@ -1,16 +1,21 @@
 Fail Macruby App
 
-1. Pull code down.
-2. Open project in xcode.
-3. Select your build target for Mac OSX 10.5 or 10.6 depending on your
-current OS and installed SDK's.
-4. Select the fail target for a release build.
-5. Build the application with cmd-B or cmd-shift-B to build and run the
+1. Go to http://macruby.org and install the latest version of macruby. (Currently 0.6)
+2. Run git clone git@github.com:mtchavez/Fail-Board.git fail-board
+3. Open project in xcode, go into fail-board directory and double-click the .xcodeproj file.
+4. Select your build target for Mac OSX 10.6.
+5. Select the fail target and choose a debug build.
+6. Build the application with cmd-B or cmd-shift-B to build and run the
 app.
-6. A build directory will now be present in the project directory. This is
+7. A build directory will now be present in the project directory. This is
 where you can go to under the release directory to get the .app file for
 the application.
+8. See http://macruby.org for more details on macruby and how to create release builds of an application.
 
-*** This project was thrown together in one day and is not in any kind of
+*** DISCLAIMER ***
+This project was thrown together rather quickly and is not in any kind of
 finished state and my still have bugs and/or crash unexpectedly. I plan on
 adding features and polishing the app as I have time.
+
+TODO:
+I am not able to get tests to run at the moment and thus the app is not tested yet.
